--- a/index.html
+++ b/index.html
@@ -3,115 +3,113 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Flowgen-ix | Automate Your Income</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <title>Flowgen-ix | Tactical Automation Kits</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #0f0f0f, #1a1a1a);
-      color: #fff;
-      overflow-x: hidden;
-    }
-    header {
-      text-align: center;
-      padding: 80px 20px 40px;
-      background: radial-gradient(circle at top, #00f5ff 0%, #000 100%);
-    }
-    h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 3rem;
-      margin-bottom: 20px;
-      animation: glow 2s ease-in-out infinite alternate;
-    }
-    @keyframes glow {
-      from { text-shadow: 0 0 10px #00f5ff; }
-      to { text-shadow: 0 0 30px #00f5ff; }
-    }
-    p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin: 0 auto 30px;
-      line-height: 1.6;
-    }
-    .cta-button {
-      background: #00f5ff;
-      color: #000;
-      padding: 15px 30px;
-      border: none;
-      font-size: 1.1rem;
-      font-weight: bold;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-    }
-    .cta-button:hover {
-      transform: scale(1.05);
+      background-color: #fff;
+      color: #111;
     }
     section {
-      padding: 60px 20px;
-      text-align: center;
+      padding: 80px 20px;
+      max-width: 900px;
+      margin: auto;
     }
-    .features {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-      margin-top: 40px;
+    h1, h2 {
+      font-weight: 800;
+      margin-bottom: 20px;
     }
-    .feature-box {
-      background: #111;
-      border: 1px solid #333;
-      border-radius: 12px;
-      padding: 20px;
-      width: 280px;
-      transition: transform 0.3s ease;
+    p {
+      font-size: 1.1em;
+      line-height: 1.6;
     }
-    .feature-box:hover {
-      transform: translateY(-5px);
+    ul {
+      padding-left: 20px;
+      line-height: 1.8;
+    }
+    .cta-buttons a {
+      display: inline-block;
+      padding: 14px 28px;
+      margin: 10px 10px 0 0;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    .primary {
+      background-color: #000;
+      color: #fff;
+    }
+    .primary:hover {
+      background-color: #333;
+    }
+    .secondary {
+      background-color: #eee;
+      color: #333;
+    }
+    .secondary:hover {
+      background-color: #ddd;
     }
     footer {
       text-align: center;
       padding: 40px 20px;
-      font-size: 0.9rem;
-      color: #aaa;
+      background-color: #f5f5f5;
+      font-size: 0.9em;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Flowgen-ix</h1>
-    <p>Build AI-powered income systems in 2 hours a day. No fluff. Just leverage.</p>
-    <a href="https://yourcheckoutlink.com"><button class="cta-button">Buy the Tutorial</button></a>
-  </header>
-
+  <!-- Hero Section -->
   <section>
-    <h2>What You’ll Get</h2>
-    <div class="features">
-      <div class="feature-box">
-        <h3>Prebuilt Automation Systems</h3>
-        <p>Plug-and-play workflows using n8n, OpenAI, and Stripe.</p>
-      </div>
-      <div class="feature-box">
-        <h3>Scalable Funnel Templates</h3>
-        <p>Faceless, high-ticket funnels designed for conversion.</p>
-      </div>
-      <div class="feature-box">
-        <h3>Tactical Execution Guide</h3>
-        <p>Step-by-step breakdowns with zero fluff and full leverage.</p>
-      </div>
+    <h1>Flowgen-ix</h1>
+    <p>Deploy tactical automation kits for faceless brands, creators, and system-driven businesses. Built for leverage, speed, and scale.</p>
+    <div class="cta-buttons">
+      <a href="https://checkout.flowgen-ix.com" class="primary">Get the Automation Kit →</a>
+      <a href="#learn-more" class="secondary">Learn More</a>
     </div>
   </section>
 
+  <!-- What It Does -->
   <section>
-    <h2>Who It’s For</h2>
-    <p>Creators, coders, and entrepreneurs who want to automate income, scale faceless brands, and dominate niche markets with elite systems.</p>
+    <h2>What It Does</h2>
+    <ul>
+      <li>Automates product delivery with n8n workflows</li>
+      <li>Deploys landing pages via GitHub and Cloudflare</li>
+      <li>Includes plug-and-play templates for faceless funnels</li>
+      <li>Designed for scalable, system-first growth</li>
+    </ul>
   </section>
 
+  <!-- How It Works -->
+  <section id="learn-more">
+    <h2>How It Works</h2>
+    <p>Each kit includes a prebuilt n8n workflow, GitHub-hosted landing page, and Cloudflare DNS setup instructions. You plug in your product, connect your checkout, and launch. No fluff. Just leverage.</p>
+  </section>
+
+  <!-- Who It's For -->
+  <section>
+    <h2>Who It's For</h2>
+    <p>Flowgen-ix is built for tactical creators, faceless entrepreneurs, and system-first operators who want to deploy fast and scale without noise. If you value automation, branding, and execution — this is for you.</p>
+  </section>
+
+  <!-- CTA Section -->
+  <section>
+    <h2>Ready to Deploy?</h2>
+    <p>Launch your automation system in minutes. No code. No clutter. Just results.</p>
+    <div class="cta-buttons">
+      <a href="https://checkout.flowgen-ix.com" class="primary">Get the Kit →</a>
+      <a href="mailto:support@flowgen-ix.com" class="secondary">Contact Support</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
   <footer>
-    &copy; 2025 Flowgen-ix. Built for leverage.
+    &copy; 2025 Flowgen-ix. Tactical systems for faceless brands.
   </footer>
 
 </body>
 </html>
+
