--- a/index.html
+++ b/index.html
@@ -11,105 +11,95 @@
       font-family: 'Inter', sans-serif;
       background-color: #fff;
       color: #111;
-    }
-    section {
-      padding: 80px 20px;
-      max-width: 900px;
+      padding: 60px 20px;
+      max-width: 800px;
       margin: auto;
     }
-    h1, h2 {
+    h1 {
+      font-size: 2.8em;
       font-weight: 800;
+      margin-bottom: 20px;
+    }
+    h2 {
+      font-size: 1.6em;
+      font-weight: 600;
+      margin-top: 60px;
       margin-bottom: 20px;
     }
     p {
       font-size: 1.1em;
       line-height: 1.6;
+      margin-bottom: 20px;
     }
     ul {
       padding-left: 20px;
       line-height: 1.8;
     }
-    .cta-buttons a {
+    .cta {
+      margin-top: 40px;
+    }
+    .cta a {
       display: inline-block;
       padding: 14px 28px;
-      margin: 10px 10px 0 0;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s ease;
-    }
-    .primary {
       background-color: #000;
       color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 6px;
+      transition: background 0.3s ease;
     }
-    .primary:hover {
+    .cta a:hover {
       background-color: #333;
     }
-    .secondary {
-      background-color: #eee;
-      color: #333;
-    }
-    .secondary:hover {
-      background-color: #ddd;
-    }
     footer {
-      text-align: center;
-      padding: 40px 20px;
-      background-color: #f5f5f5;
+      margin-top: 80px;
       font-size: 0.9em;
+      color: #666;
+      text-align: center;
     }
   </style>
 </head>
 <body>
 
-  <!-- Hero Section -->
-  <section>
-    <h1>Flowgen-ix</h1>
-    <p>Deploy tactical automation kits for faceless brands, creators, and system-driven businesses. Built for leverage, speed, and scale.</p>
-    <div class="cta-buttons">
-      <a href="https://checkout.flowgen-ix.com" class="primary">Get the Automation Kit →</a>
-      <a href="#learn-more" class="secondary">Learn More</a>
-    </div>
-  </section>
+  <h1>Flowgen-ix</h1>
+  <p>Deploy tactical automation kits for faceless brands, creators, and system-driven businesses. Built for leverage, speed, and scale.</p>
 
-  <!-- What It Does -->
-  <section>
-    <h2>What It Does</h2>
-    <ul>
-      <li>Automates product delivery with n8n workflows</li>
-      <li>Deploys landing pages via GitHub and Cloudflare</li>
-      <li>Includes plug-and-play templates for faceless funnels</li>
-      <li>Designed for scalable, system-first growth</li>
-    </ul>
-  </section>
+  <div class="cta">
+    <a href="https://checkout.flowgen-ix.com">Get the Kit →</a>
+  </div>
 
-  <!-- How It Works -->
-  <section id="learn-more">
-    <h2>How It Works</h2>
-    <p>Each kit includes a prebuilt n8n workflow, GitHub-hosted landing page, and Cloudflare DNS setup instructions. You plug in your product, connect your checkout, and launch. No fluff. Just leverage.</p>
-  </section>
+  <h2>What’s Inside</h2>
+  <ul>
+    <li>Prebuilt n8n workflows for automated product delivery</li>
+    <li>GitHub-hosted landing page templates with Cloudflare routing</li>
+    <li>Webhook-ready checkout integration (Stripe, Gumroad, custom)</li>
+    <li>DNS setup instructions for faceless deployment</li>
+  </ul>
 
-  <!-- Who It's For -->
-  <section>
-    <h2>Who It's For</h2>
-    <p>Flowgen-ix is built for tactical creators, faceless entrepreneurs, and system-first operators who want to deploy fast and scale without noise. If you value automation, branding, and execution — this is for you.</p>
-  </section>
+  <h2>How It Works</h2>
+  <p>Each kit is designed to launch in under 30 minutes. You plug in your product, connect your checkout, and deploy. No fluff. No dependencies. Just leverage.</p>
 
-  <!-- CTA Section -->
-  <section>
-    <h2>Ready to Deploy?</h2>
-    <p>Launch your automation system in minutes. No code. No clutter. Just results.</p>
-    <div class="cta-buttons">
-      <a href="https://checkout.flowgen-ix.com" class="primary">Get the Kit →</a>
-      <a href="mailto:support@flowgen-ix.com" class="secondary">Contact Support</a>
-    </div>
-  </section>
+  <h2>Who It’s For</h2>
+  <p>Flowgen-ix is built for tactical creators, faceless entrepreneurs, and system-first operators who value speed, automation, and credibility. If you're building quietly but scaling aggressively, this is for you.</p>
 
-  <!-- Footer -->
+  <h2>Why It’s Different</h2>
+  <ul>
+    <li>Zero-code deployment</li>
+    <li>Faceless branding architecture</li>
+    <li>Optimized for conversion and credibility</li>
+    <li>Built for scale, not noise</li>
+  </ul>
+
+  <h2>Next Steps</h2>
+  <p>Once you purchase, you’ll receive instant access to your kit via secure link. Setup takes minutes. Support is available if needed, but the system is designed to run without it.</p>
+
+  <div class="cta">
+    <a href="https://checkout.flowgen-ix.com">Deploy Now →</a>
+  </div>
+
   <footer>
     &copy; 2025 Flowgen-ix. Tactical systems for faceless brands.
   </footer>
 
 </body>
 </html>
-
