--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     section:nth-of-type(2) { animation-delay: 0.5s; }
     section:nth-of-type(3) { animation-delay: 1s; }
     section:nth-of-type(4) { animation-delay: 1.5s; }
+    section.cta-section { animation-delay: 2s; }
     h2 {
       font-size: 2rem;
       margin-bottom: 20px;
@@ -103,7 +104,7 @@
       color: #aaa;
       opacity: 0;
       animation: fadeInUp 1s ease-out forwards;
-      animation-delay: 2s;
+      animation-delay: 2.5s;
     }
   </style>
 </head>
@@ -112,7 +113,6 @@
   <header>
     <h1>Flowgen-ix</h1>
     <p>Build AI-powered income systems in 2 hours a day. No fluff. Just leverage.</p>
-    <a href="https://yourcheckoutlink.com"><button class="cta-button">Get the Kit</button></a>
   </header>
 
   <section>
@@ -141,6 +141,12 @@
   <section>
     <h2>How It Works</h2>
     <p>You get a downloadable kit with everything preconfigured. Connect your product, plug in your checkout, and deploy. No dependencies, no fluff, no wasted time.</p>
+  </section>
+
+  <section class="cta-section">
+    <h2>Ready to Deploy?</h2>
+    <p>Launch your faceless automation system in under 30 minutes. Built for speed, scale, and credibility.</p>
+    <a href="https://yourcheckoutlink.com"><button class="cta-button">Get the Kit</button></a>
   </section>
 
   <footer>
